<resources>
    <string name="app_name">OffRoad Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_load">Map</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="compass_heading">Heading 0.0°</string>
    <string name="quit_dialog_message">Do you want to quit the app?</string>

    <string name="action_settings">Settings</string>
    <string name="open_map_button">Open Map</string>
    <string name="load_route_button">Load Route</string>
    <string name="save_route_button">Save Route</string>
    <string name="save_button">Save</string>
    <string name="discard_button">Discard</string>
    <string name="interest">Point of Interest</string>
    <string name="warning">Warning</string>
    <string name="trail_start">Start of Trail</string>
    <string name="obstacle">Obstacle on Trail</string>
    <string name="dead_end">Dead End</string>
    <string name="edit_markers_hint">Please enter your Message</string>
    <string name="edit_coords_hint">Enter Coordinates eg. "53.347132, -6.259146"</string>
    <string name="edit_route_name_hint">Route Name</string>
    <string name="edit_route_comment_hint">Comments</string>
    <string name="stop_tracking_message">Do you want to stop tracking route?</string>
    <string name="positive_dialog_choice">Yes</string>
    <string name="negative_dialog_choice">No</string>
    <string name="positive_button_message_alt">Open</string>
    <string name="negative_button_message_alt">Close</string>
    <string name="dist_text_view">Dist: 25.2 km</string>
    <string name="time_text_view">Time: 01:29:56</string>
    <string name="elev_gain_text_view">Elev Gain: 1,116m</string>
    <string name="max_elev_text_view">Max Gain: 567m</string>
    <string name="public_map_toggle">Upload to Public Map</string>
    <string name="choose_route_menu">Choose Your Route</string>
</resources>
