<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top"
    style="@style/RouteMenu"
    tools:context="cbpos1989.com.offroadtracker.RouteEndedActivity">

    <EditText
        style="@style/RouteMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/edit_route_name_hint"/>
    <EditText
        style="@style/RouteMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/edit_route_comment_hint"/>

    <!--Route Details-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/RouteMenuDetailsText"
            android:text="@string/dist_text_view" />

        <TextView
            style="@style/RouteMenuDetailsText"
            android:gravity="center_horizontal"
            android:text="@string/time_text_view"/>

        <TextView
            style="@style/RouteMenuDetailsText"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/elev_gain_text_view"/>

        <TextView
            style="@style/RouteMenuDetailsText"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/max_elev_text_view"/>

    </GridLayout>

    <!--Hike & Bike Buttons-->
    <RadioGroup
        android:id="@+id/routeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/hikerToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/hikeToggle"
            android:background="@drawable/hiker_toggle_bg"
            android:checked="true" />

        <RadioButton
            android:id="@+id/bikeToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bikeToggle"
            android:background="@drawable/bike_toggle_bg"
            android:checked="true" />

    </RadioGroup>

    <!--Public Map Toggle-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_public_black_48dp"/>

        <TextView
            style="@style/RouteMenuDetailsText"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/public_map_toggle"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!--Save & Discard Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <Button
            style="@style/MainButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button" />
        <Button
            style="@style/MainButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard_button" />

    </LinearLayout>

</LinearLayout>
